Source/WebKit2/UIProcess/Launcher/gtk/ProcessLauncherGtk.cpp
@@ -61,7 +61,7 @@ void ProcessLauncher::launchProcess()
     GPid pid = 0;
 
     int sockets[2];
-    if (socketpair(AF_UNIX, SOCK_DGRAM, 0, sockets) < 0) {
+    if (socketpair(AF_UNIX, SOCK_STREAM, 0, sockets) < 0) {
         g_printerr("Creation of socket failed: %s.\n", g_strerror(errno));
         ASSERT_NOT_REACHED();
         return;
